# asterisc

./: .gitignore
rvgo/fast/: vm.go
rvgo/riscv/: constants.go
rvgo/test/: vm_go_test.go
tests/rust-tests/: Makefile
tests/rust-tests/matmul/: Cargo.toml
tests/rust-tests/matmul/src/: main.rs
tests/rust-tests/minimal/: Cargo.toml
tests/rust-tests/minimal/.cargo/: config.toml
tests/rust-tests/minimal/src/: main.rs
tests/rust-tests/mnist/: Cargo.toml
tests/rust-tests/mnist/src/: main.rs
tests/rust-tests/no_std/: Cargo.toml
tests/rust-tests/no_std/src/: main.rs  utils.rs
tests/rust-tests/onnx/: Cargo.toml  input.bytes  model.bytes
tests/rust-tests/onnx/src/: main.rs
