[package]
name = "mnist"
version = "0.1.0"
edition = "2021"

[dependencies]
# anyhow = "1.0.82"
sp1-zkvm = { path = "../../../../sp1/zkvm/entrypoint", version = "0.1.0" }
candle = { path = "../../../../candle/candle-core", package = "candle-core", version = "0.5.0" }
candle-nn = { path = "../../../../candle/candle-nn", version = "0.5.0" }
rand = "0.8.5"
